Trying to solve the flickering area

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ html, body {
   /* height: 100vh;
    */
   position: absolute;
+
+  -webkit-backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
 }
 
 html {
@@ -48,7 +51,7 @@ body::before {
   background-size: cover;
   width: 100%;
   background-repeat: no-repeat;
-  box-shadow: 0px -100px 200px 0px rgb(2 25 75) inset;
+  /* box-shadow: 0px -100px 200px 0px rgb(2 25 75) inset; */
   z-index: -1;
 }
 
